# islamic_times

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  calculation_equations.py  importtime_islamic_times.txt  islamic_times.py  main.py  main_2.py  map_generator.py  mapper.py  moon_equations.py  pyproject.toml  setup.py  sun_equations.py  test.py  time_equations.py
.agents/: README.md  coding-standards.md  project-structure.md  workflow-checklist.md
.github/workflows/: build-wheels.yml  (+1 more)
docs/: README.md  code_review_audit.md  documentation_audit.md
examples/: demo.py  test.py
include/: _calculation_equations.h  _sun_equations.h  _time_equations.h  astro_core.h  c_calculation_equations.h  c_datetime.h  c_moon_equations.h  c_sun_equations.h  c_time_equations.h  c_visibilities.h
islamic_times/: __init__.py  astro_core.cp313-win_amd64.pyd  calculation_equations.py  dataclasses.py  islamic_times.py  it_dataclasses.py  moon_equations.py  prayer_times.py  sun_equations.py  time_equations.py
map_shp_files/: combined_polygons.shx
src/: _calculation_equations.c  _sun_equations.c  _time_equations.c  astro_core.c  astro_core.h  c_calculation_equations.c  c_datetime.c  c_moon_equations.c  c_sun_equations.c  c_time_equations.c  c_visibilities.c
tests/: conftest.py  test_calculation_equations.py  test_core_smoke.py  test_dataclasses_formatting.py  test_error_translation.py  test_itlocation_batch_api.py  test_itlocation_init_validation.py  test_itlocation_methods.py  test_itlocation_state_transitions.py  test_known_defects_xfail.py  test_mapper_cache.py  test_mapper_cli.py  test_mapper_compute.py  test_mapper_config.py  test_mapper_optional_deps.py  test_mapper_profiling.py  test_native_memory_regression.py  test_native_validation.py  test_time_equations.py  test_transit_day_normalization.py
(+40 files in other folders)
