[build-system]
requires = [
    "setuptools>=70",
    "wheel",
    "numpy>=1.22",
    "setuptools_scm[toml]>=7",
]
build-backend = "setuptools.build_meta"

[project]
name = "islamic_times"
dynamic = ["version"]
description = "Islamic astronomical calculations, prayer times, Hijri conversion, and crescent visibility."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hassan Tahan", email = "contact@hassantahan.com" }]
keywords = ["islamic", "astronomy", "prayer-times", "hijri", "crescent-visibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "pytz",
    "timezonefinder",
]

[project.optional-dependencies]
map = [
    "matplotlib",
    "shapely",
    "geopandas",
    "psutil",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/hassantahan/islamic_times"
Repository = "https://github.com/hassantahan/islamic_times"
Issues = "https://github.com/hassantahan/islamic_times/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["islamic_times*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "src/islamic_times/_version.py"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F"]
